fixes and model generator